log
Fri Mar 26 06:15:20 UTC 2021: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:0:
list.c: In function ‘firstList’:
list.c:37:9: error: unused variable ‘lista’ [-Werror=unused-variable]
   List *lista = (List*) malloc(sizeof(List));
         ^~~~~
cc1: all warnings being treated as errors
Compilation failed
Fri Mar 26 06:15:28 UTC 2021: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
c569efc
Fri Mar 26 06:16:04 UTC 2021: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
34f76ca
Fri Mar 26 06:22:17 UTC 2021: 
 list.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  2|5
total_score: 15/70
8a81b85
Fri Mar 26 06:22:53 UTC 2021: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
d57a5ac
Fri Mar 26 06:23:39 UTC 2021: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  3|5
total_score: 15/70
d7ff3c3
